--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/react": "11.2.5",
     "@testing-library/user-event": "12.6.2",
     "chalk": "4.1.0",
+    "eslint-config-react-app": "7.0.1",
+    "eslint-plugin-react-hooks": "5.0.0",
     "history": "5.0.0",
     "jest-localstorage-mock": "2.4.16",
     "js-cookie": "2.2.1",
@@ -23,17 +25,22 @@
     "react-router-dom": "5.2.0",
     "react-slick": "0.28.1",
     "reactjs-popup": "2.0.5",
-    "slick-carousel": "1.8.1"
+    "slick-carousel": "1.8.1",
+    "webpack": "4.44.2",
+    "webpack-cli": "3.3.12"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "7.25.9",
+    "eslint": "8.0.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-prettier": "3.3.1",
+    "eslint-plugin-react": "7.37.2",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
     "npm-run-all": "4.1.5",
     "prettier": "2.2.1",
-    "react-scripts": "4.0.3"
+    "react-scripts": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
